[package]
name = "reinhardt-grpc"
version = "0.3.1"
description = "gRPC support for building RPC services"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# Settings fragment support
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-core = { workspace = true }

# DI support (optional)
reinhardt-di = { workspace = true, optional = true }
reinhardt-grpc-macros = { workspace = true, optional = true }

[features]
default = []
full = ["di"]
di = ["reinhardt-di", "reinhardt-grpc-macros"]

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
