[package]
name = "reinhardt-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP primitives, request and response handling for Reinhardt"
repository.workspace = true

[dependencies]
bytes = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
futures = "0.3.31"
thiserror = { workspace = true }
sha2 = { workspace = true }
reinhardt-parsers = { workspace = true, optional = true }
reinhardt-exception = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
percent-encoding = "2.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
futures-util = { workspace = true }
reinhardt-routers = { workspace = true }
reinhardt-test = { workspace = true }

[features]
default = ["parsers"]
parsers = ["dep:reinhardt-parsers"]
full = ["parsers"]
