[package]
name = "reinhardt-http"
version = "0.1.0-rc.1"
edition.workspace = true
license.workspace = true
description = "HTTP primitives, request and response handling for Reinhardt"
keywords = ["http", "web", "request", "response", "framework"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
documentation = "https://docs.rs/reinhardt-http"
repository.workspace = true

[dependencies]
bytes = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
futures = "0.3.31"
thiserror = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
percent-encoding = "2.3"
reinhardt-core = {workspace = true, features = ["exception"]}
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["parsers"]
parsers = ["reinhardt-core/parsers"]
messages = ["reinhardt-core/messages"]
full = ["parsers", "messages"]
