[package]
name = "reinhardt-i18n"
version = "0.1.0-alpha.5"
description = "Internationalization and localization support"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reinhardt-utils = { workspace = true }

# DI integration (optional)
reinhardt-di = { workspace = true, optional = true }

[features]
default = []
full = ["di"]
di = ["dep:reinhardt-di"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
serial_test = { workspace = true }
rstest = { workspace = true }
scopeguard = { workspace = true }
reinhardt-test = { workspace = true }
reinhardt-di = { workspace = true }
unic-langid = "0.9"
