[package]
name = "reinhardt-i18n"
version = "0.3.0"
description = "Internationalization and localization support"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reinhardt-utils = { workspace = true }

# DI integration (optional)
reinhardt-di = { workspace = true, optional = true }

[features]
default = []
full = ["di"]
di = ["dep:reinhardt-di"]
# Kept for feature-name compatibility. Test helpers for this crate are provided
# through dev-dependencies so pages can depend on i18n without pulling the
# reinhardt-test -> reinhardt-pages cycle into the normal dependency graph.
test-utils = []

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
tempfile = "3.8"
serial_test = { workspace = true }
rstest = { workspace = true }
scopeguard = { workspace = true }
reinhardt-di = { workspace = true }
unic-langid = "0.9"
