[package]
name = "reinhardt-mail"
version = "0.1.0-alpha.24"
description = "Email sending functionality with multiple backends"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reinhardt-conf = { workspace = true, features = ["settings"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reinhardt-core = { workspace = true, features = ["exception", "types"] }
async-trait = { workspace = true }
tokio = { workspace = true }
lettre = { version = "0.11", features = [
  "tokio1",
  "tokio1-native-tls",
  "builder",
  "smtp-transport",
  "hostname",
] }
# Pin to avoid build failure in native-tls 0.2.17 (non-exhaustive pattern in openssl.rs)
native-tls = { workspace = true }
mime = "0.3"
mime_guess = "2.0"
chrono = { workspace = true }
idna = "1.0"
zeroize = "1.8"

[features]
full = []

[dev-dependencies]
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
tempfile = "3.8"
testcontainers = { workspace = true }
once_cell = "1.20"
rstest = { workspace = true }
reinhardt-test = { workspace = true, features = ["testcontainers"] }
reqwest = { version = "0.12", features = ["json"] }
futures = { workspace = true }
