[package]
name = "reinhardt-mail"
version = "0.2.0-rc.1"
description = "Email sending functionality with multiple backends"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reinhardt-conf = { workspace = true, features = ["settings"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reinhardt-core = { workspace = true, features = ["exception", "types"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
# Floor at 0.11.22 to clear RUSTSEC-2026-0141 (TLS hostname verification disabled
# under boring-tls backend; fixed in 0.11.22). The `tokio1-native-tls` feature
# does not hit the vulnerable boring-tls code path here, but the floor protects
# downstream consumers that may enable other TLS backends.
lettre = { version = "0.11.22", features = [
  "tokio1",
  "tokio1-native-tls",
  "builder",
  "smtp-transport",
  "hostname",
] }
# Pin to avoid build failure in native-tls 0.2.17 (non-exhaustive pattern in openssl.rs)
native-tls = { workspace = true }
mime = "0.3"
mime_guess = "2.0"
chrono = { workspace = true }
idna = "1.0"
zeroize = "1.8"

[features]
full = []

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
tempfile = "3.8"
testcontainers = { workspace = true }
once_cell = "1.20"
rstest = { workspace = true }
# Workaround for KI-2 (rust-lang/cargo#4242, rust-lang/cargo#15151):
# Path-only dev-dep (no version) is stripped from published manifest by cargo,
# avoiding dev-dependency version resolution failure during `cargo publish`.
# When upstream cargo resolves these issues, replace with `workspace = true`.
reinhardt-testkit = { path = "../reinhardt-testkit", features = ["testcontainers"] }
reqwest = { workspace = true }
futures = { workspace = true }
